ref#21898 - fixed contact information display in member's show page.

--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -118,7 +118,7 @@
   </thead>
   <tbody>
     <tr>
-      <th style="width: 25%;"><%= t('activerecord.attributes.member.phone_number') %></th><th><%= t('activerecord.attributes.member.type_of_phone_number') %></th><th style="width: 25%;">Email</th><th>Birth date</th>
+      <th style="width: 40%;"><%= t('activerecord.attributes.member.phone_number') %></th><th style="width: 30%;"><%= t('activerecord.attributes.member.type_of_phone_number') %></th><th style="width: 15%;">Email</th><th style="width: 15%;">Birth date</th>
     </tr>
     <tr class="<%= (!@current_member.wrong_phone_number.nil? ? "yellow" : "") %>">
       <td>
