refs #21663: added api user and password fields for clubs, better button hiding, fixed timeouts

--- a/app/views/clubs/_form.html.erb
+++ b/app/views/clubs/_form.html.erb
@@ -13,6 +13,18 @@
     </div>
   </div>
   <div class="control-group">
+    <%= f.label :api_username, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :api_username, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :api_password, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.password_field :api_password, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
     <%= f.label :description, :class => 'control-label' %>
     <div class="controls">
       <%= f.text_area :description, :cols => 60, :rows =>5, :class => 'text_area input-xxlarge' %>
