using password field for Club#api_password is unnecessary

--- a/app/views/clubs/_form.html.erb
+++ b/app/views/clubs/_form.html.erb
@@ -21,7 +21,7 @@
   <div class="control-group">
     <%= f.label :api_password, :class => 'control-label' %>
     <div class="controls">
-      <%= f.password_field :api_password, :class => 'text_field' %>
+      <%= f.text_field :api_password, :class => 'text_field' %>
     </div>
   </div>
   <div class="control-group">
