--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -51,6 +51,17 @@
       </div>
     </div>
 
+    <div class="row-fluid" style="margin-top: 8px;">
+      <div class="span4"><%= link_to "Resend welcome email", "#", :class => "btn btn-large-w #{(@current_member.lapsed? ? "disabled" : "btn-success")}" %>
+      </div>
+      <div class="span4">
+        <%= link_to "Password reset", "#", :class => "btn btn-large-w #{(@current_member.lapsed? ? "disabled" : "btn-info")}" %>
+      </div>
+      <div class="span4">
+        <% disable_cancel = @current_member.can_be_canceled? == false %>
+        <%= link_to("Cancel", (!disable_cancel ? member_cancel_path : "#"), :class => "btn  btn-large-w #{(disable_cancel ? "disabled" : "btn-danger")}")  %>
+      </div>
+    </div>  
 
     <div class="row-fluid" style="margin-top: 8px;">
       <div class="span4">
