--- a/app/views/members/_fulfillments.html.erb
+++ b/app/views/members/_fulfillments.html.erb
@@ -14,7 +14,7 @@
         <tr> <td colspan="5"> <%= t('activerecord.attributes.fulfillment.not_found') %> </td> </tr>
       <% end %> 
       <% @fulfillments.each do |fulfillment| %>
-   		 <tr <% if fulfillment.open? %> 
+   		 <tr <% if fulfillment.processing? %> 
         	  class="ligthgreen" 
        		 <% end %> >
 			<td> <%= I18n.l fulfillment.assigned_at, :format => :long %> </td>
@@ -23,7 +23,7 @@
 			         :format => :long unless fulfillment.renewable_at.nil? %> </td>
 			<td>
 			  <%= form_for @fulfillment, :as => :fulfillment, :url => member_resend_fulfillment_path(:fulfillment_id => fulfillment.id), do |f| %>
-			  	<%= f.submit t('resend'), :name => 'resend', :class => "btn btn-warning confirm" if fulfillment.open? %>
+			  	<%= f.submit t('resend'), :name => 'resend', :class => "btn btn-warning confirm" if fulfillment.processing? %>
 			  <% end %>
 			</td>
 		</tr>
