--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -28,7 +28,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_agent.username %><b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><%= link_to t('menu.logout'), destroy_agent_session_path, :method => :delete  %></li>
+                <li><%= link_to t('menu.logout'), destroy_agent_session_path, :method => :delete, :id => "link_logout"  %></li>
               </ul>
             </li>
           </ul>
