new add member integration test

--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -14,7 +14,7 @@
   </tr> 
   <% end %>
   
-<table class="table table-bordered table-condensed table-nohover">
+<table id="table_demographic_information" class="table table-bordered table-condensed table-nohover">
   <thead>
     <tr class="box_title"><th colspan="2"><h4>Demographic information</h4></th></tr>
   </thead>
@@ -110,7 +110,7 @@
   </tbody>
 </table>
 
-<table class="table table-bordered table-condensed table-nohover">
+<table id="table_contact_information" class="table table-bordered table-condensed table-nohover">
   <thead>
     <tr class="box_title"><th colspan="2"><h4>Contact Information</h4></th></tr>
   </thead>
