--- a/app/views/members/blacklist.html.erb
+++ b/app/views/members/blacklist.html.erb
@@ -5,7 +5,7 @@
     <tr>
       <td> 
         <%= label :reason, t('reason'), :class => 'help-inline' %> 
-        <%= select_tag :reason, options_from_collection_for_select(@blacklist_reason, "name", "name"), :class => "required", :include_blank => true %>
+        <%= select_tag :reason, options_from_collection_for_select(@blacklist_reasons, "name", "name"), :class => "required", :include_blank => true %>
       </td>
     </tr>
     <tr>
