--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -94,12 +94,12 @@
       <th style="width: 20%;">Address</th><th  style="width: 20%;">City</th><th>State</th><th>Country</th><th>Zip</th><th>Actions</th>
     </tr>
     <tr class="<%= (!@current_member.wrong_address.nil? ? "yellow" : "") %>">
-      <td><%= @current_member.address %></td>
+      <td NOWRAP><%= @current_member.address %></td>
       <td><%= @current_member.city %></td>
       <td><%= @current_member.state %></td>
       <td><%= @current_member.country %></td>
       <td><%= @current_member.zip %></td>
-      <td>
+      <td NOWRAP>
         <% if @current_member.wrong_address.nil? %>
           <%= link_to(member_set_undeliverable_path, :class => "btn btn-danger", :id => "link_member_set_undeliverable") do %> 
             <i class="icon-remove"></i> <%= t('activerecord.attributes.member.set_undeliverable') %>
