new methods in members integration test

--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -172,7 +172,7 @@
 </table>
 
 <% if @member.new_record? %>
-<table class="table table-bordered table-condensed table-nohover">
+<table id="table_credit_card" class="table table-bordered table-condensed table-nohover">
   <thead>
     <tr class="box_title">
       <th colspan="2"><h4>Credit Card</h4>
