--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -254,7 +254,7 @@
             <td id="td_mi_club_cash_amount">
               <%= @current_member.club_cash_amount.to_f %>&nbsp;&nbsp;&nbsp;
               <% unless disable_save_sale %>
-                <%= link_to(member_add_club_cash_path, :class => "btn btn-success") do %> 
+                <%= link_to(member_add_club_cash_path, :class => "btn btn-success", :id => "link_member_add_club_cash") do %> 
                   <i class="icon-plus"></i> <%= t('activerecord.attributes.member.add_club_cash_transaction') %>
                 <% end %>
               <% end %>
