--- a/app/views/members/_transactions.html.erb
+++ b/app/views/members/_transactions.html.erb
@@ -7,7 +7,7 @@
       <th> <%= t('activerecord.attributes.transaction.amount') %> </th>
       <th> <%= t('activerecord.attributes.transaction.refundable') %> </th>
       <th> <%= t('activerecord.attributes.transaction.gw_trans') %> </th>
-      <th> actions </th>
+      <th> <%= t('actions') %> </th>
     </tr>
   </thead>
   <tbody>
