refs #21771 - fulfillments routes re-generated according to REST

--- a/app/views/fulfillments/index.html.erb
+++ b/app/views/fulfillments/index.html.erb
@@ -4,7 +4,7 @@
   </div>
 </section>
 
-<%= form_tag do %>
+<%= form_tag(fulfillments_index_path) do %>
   <table class="table table-bordered ">
   	<tr>
   		<td>
